--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px 50px;
-  background: #fff;
+  background: #152034;
   color: #0a2b55;
   font-weight: bold;
 }
 
 .logo {
   font-size: 18px;
-  color: #0a2b55;
+  color: #ECBA25;
 }
 
 .nav-links {
@@ -35,44 +35,42 @@ body {
 
 .nav-links a {
   text-decoration: none;
-  color: #0a2b55;
+  color: #FFFF;
   font-weight: 500;
 }
 
 .btn-contato {
-  background: #0a2b55;
-  color: #fff;
+  background: #ECBA25;
+  color: #000000;
   text-decoration: none;
   padding: 10px 18px;
   border-radius: 6px;
   font-size: 14px;
   transition: 0.3s;
 }
-
-.btn-contato:hover {
-  background: #083565;
+.btn-contato img.icon{
+  width: 20px;
+  height: auto;
+  margin-right: 8px;
+  vertical-align: middle;
 }
 
+.btn img.icon{
+  width: 20px;
+  height:auto;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+.btn-contato:hover {
+  background: #a27e0f;
+}
+/*imagem de fundo*/
 .hero {
   position: relative;
-  height: 85vh;
-  background: url("klicfundo.jpg") no-repeat center center/cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-  padding: 0 50px;
+  height: 100vh;
+  background: url("img/fundo.jpg") no-repeat center center/cover;
+ 
 }
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(10, 43, 85, 0.75);
-}
-
 .hero-content {
   position: relative;
   max-width: 700px;
@@ -96,18 +94,27 @@ body {
 
 .hero-buttons .btn {
   display: inline-block;
-  background: #fff;
-  color: #0a2b55;
-  text-decoration: none;
+  text-decoration:none;
   padding: 12px 24px;
   border-radius: 8px;
   font-weight: bold;
   transition: 0.3s;
-    min-width: 210px;   
-  text-align: center
+  min-width: 210px;
+  text-align: center;
 }
+.btn-amarelo{
+  background: #ECBA25;
+  color: #000101;
+}
+.btn-branco{
+  background: #fff;
+  color: #000000;
+}
+.btn-amarelo:hover{
+  background:#fff;
+}
+.btn-branco:hover{
+  background:#ECBA25;
 
-.hero-buttons .btn:hover {
-  background: #ddd;
 }
 
